--- a/mfc_app/templates/service_list.html
+++ b/mfc_app/templates/service_list.html
@@ -83,7 +83,7 @@
                                 </td>
                                 <td>{{ service.created_at|date:"d.m.Y H:i" }}</td>
                                 <td class="action-buttons">
-                                    <a href="/service/{{ service.service_id }}/" class="btn btn-sm btn-outline-primary">
+                                    <a href="{% url 'service_detail' service.service_id %}" class="btn btn-sm btn-outline-primary">
                                         <i class="fas fa-eye"></i>
                                     </a>
                                     <a href="/service/{{ service.service_id }}/edit/" class="btn btn-sm btn-outline-warning">
