--- a/mfc_app/templates/home.html
+++ b/mfc_app/templates/home.html
@@ -60,7 +60,8 @@
                 <i class="fas fa-building me-2"></i>МФЦ Портал
             </a>
             <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="#"><i class="fas fa-user me-1"></i>Личный кабинет</a>
+<!--                <a class="nav-link" href="#"><i class="fas fa-user me-1"></i>Личный кабинет</a>-->
+                <a class="nav-link" href="/"><i class="fas fa-home me-1"></i>Главная</a>
                 <a class="nav-link" href="/services/"><i class="fas fa-cogs me-1"></i>Управление услугами</a>
             </div>
         </div>
